--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body{
+   
     background:#999;
     color:white;
 }
@@ -14,10 +15,9 @@ body{
 }
 
 #nav ul{
-    padding-left:5px;
     padding: 15px;
-    background: #666;
-
+    background: #27ae60;
+    box-shadow: 5px 5px #aaa;
 }
 
 #nav li{
@@ -33,25 +33,42 @@ a {
 }
 
 .active{
-    color:#aaa;
-
+    color:#555;
 }
 
 #about{
     float:left;
     width:70%;
-
 }
 
 #sidebar{
+    background: #888888;
+    position: sticky;
+    top:0px;
+    padding:5px;
     float:right;
     width:25%;
-
 }
 
 #footer{
-    
-    padding:2px;
+    padding:2px 0px 2px 5px;
     background: #888;
+}
+
+#goToTop{
+    position: fixed;
+    bottom:20px;  
+    margin-left:830px;
+    padding:2px 5px;
+    border-radius: 200px;
+    background: orange;
+}
+
+#goToTop a {
+        padding:5px 20px;
+        border-radius: 200px;
+        -webkit-border-radius:200px; /* Safari browser doesnt support boarder-radius, for the safari add -webkit prefix to make it work
+        border: 2px solid orange;
+        background: orange;
 }
 
